added functionality to the project

--- a/app/styles/sass/main.scss
+++ b/app/styles/sass/main.scss
@@ -1,2 +1,14 @@
 @import 'bootstrap/_bootstrap';
-
+#mountElement {
+    width: 90%;
+    margin: 0 auto;
+}
+.movie-info {
+    p {
+        padding: 10px;
+    }
+    img {
+        float: left;
+        margin-right: 10px;
+    }
+}
